sw/source/core/inc/pagefrm.hxx
@@ -81,6 +81,8 @@ class SW_DLLPUBLIC SwPageFrame final: public SwFootnoteBossFrame
     bool m_bInvalidAutoCmplWrds :1; // Update auto complete word list
     bool m_bInvalidWordCount    :1;
     bool m_bHasGrid             :1; // Grid for Asian layout
+    mutable bool m_bInAtPageFlyFormatting : 1 = false;
+    mutable bool m_bInvalidAtPageFly : 1 = false; // Disambiguate at-page invalidation
 
     static const sal_Int8 snShadowPxWidth;
 
@@ -229,6 +231,7 @@ public:
     inline void ValidateSmartTags() const;
     inline void ValidateAutoCompleteWords() const;
     inline void ValidateWordCount() const;
+    void ValidateAtPageFly() const { m_bInvalidAtPageFly = false; }
     inline bool IsInvalid() const;
     inline bool IsInvalidFly() const;
     bool IsRightShadowNeeded() const;
@@ -242,6 +245,9 @@ public:
     bool IsInvalidSmartTags() const { return m_bInvalidSmartTags; }
     bool IsInvalidAutoCompleteWords() const { return m_bInvalidAutoCmplWrds; }
     bool IsInvalidWordCount() const { return m_bInvalidWordCount; }
+    bool IsInvalidAtPageFly() const { return m_bInvalidAtPageFly; }
+    bool IsInAtPageFlyFormatting() const { return m_bInAtPageFlyFormatting; }
+    void SetInAtPageFlyFormatting(bool val) const { m_bInAtPageFlyFormatting = val; }
 
     /** SwPageFrame::GetDrawBackgroundColor
 
@@ -373,6 +379,8 @@ inline const SwContentFrame *SwPageFrame::FindLastBodyContent() const
 inline void SwPageFrame::InvalidateFlyLayout() const
 {
     const_cast<SwPageFrame*>(this)->m_bInvalidFlyLayout = true;
+    if (m_bInAtPageFlyFormatting)
+        m_bInvalidAtPageFly = true;
 }
 inline void SwPageFrame::InvalidateFlyContent() const
 {
